2009-09-20  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac: Replace GC_WIN32_THREADS with GC_THREADS.
	* configure.ac: Process enable_parallel_mark option for Cygwin and
	Win32; define THREAD_LOCAL_ALLOC for Win32.

2009-09-20  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gc_priv.h: Define AO_ASSUME_WINDOWS98 if
	PARALLEL_MARK (required for VC++ x86).

2009-09-19  Ivan Maidanski <ivmai@mail.ru>
	(ivmai149.diff)

	* dbg_mlc.c (GC_generate_random_backtrace): Call
	GC_try_to_collect(GC_never_stop_func) instead of GC_gcollect();
	if GC is disabled then print error message and return.
	* include/gc.h (GC_try_to_collect): Refine the comment.
	* include/private/gc_priv.h (GC_never_stop_func): Fix return type;
	refine the comment.

2009-09-19  Ivan Maidanski <ivmai@mail.ru>
	(ivmai147.diff)

	* add_gc_prefix.c: Move the file to the new "extra" directory.
	* AmigaOS.c: Ditto.
	* gcname.c: Ditto.
	* if_mach.c: Ditto.
	* if_not_there.c: Ditto.
	* MacOS.c: Ditto.
	* msvc_dbg.c: Ditto.
	* setjmp_t.c: Ditto.
	* threadlibs.c: Ditto.
	* EMX_MAKEFILE: Prepend setjmp_t.c with "extra" directory.
	* Makefile: Prepend AmigaOS.c, MacOS.c, add_gc_prefix.c, gcname.c,
	if_mach.c, if_not_there.c, msvc_dbg.c, setjmp_t.c, threadlibs.c
	with "extra" directory.
	* Makefile.am: Ditto.
	* Makefile.direct: Ditto.
	* Makefile.dj: Ditto.
	* Makefile.in: Ditto.
	* NT_MAKEFILE: Prepend msvc_dbg.obj with "extra" directory.
	* NT_STATIC_THREADS_MAKEFILE: Ditto.
	* NT_X64_STATIC_THREADS_MAKEFILE: Ditto.
	* NT_X64_THREADS_MAKEFILE: Ditto.
	* NT_THREADS_MAKEFILE: Prepend msvc_dbg.c with "extra" directory.
	* gc.mak: Ditto.
	* PCR-Makefile: Prepend if_mach.c, if_not_there.c with "extra"
	directory.
	* SMakefile.amiga: Prepend AmigaOS.c, setjmp_t.c with "extra"
	directory.
	* doc/simple_example.html: Update for threadlibs.c.
	* os_dep.c: Prepend included AmigaOS.c with "extra" directory.

2009-09-19  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c: Expand all tabs to spaces; remove trailing spaces at